@@ -1,5 +1,6 @@
 aarlo/pyaarlo
 0.7.2b10: Better choose back end.
+  Tidy snapshot handling.
 0.7.2b9: Stop Arlo on authentication failure.
 0.7.2b8: Fix IMAP compatability issues.
 0.7.2b7: Allow sse backend to be used (fix reconnect).
